- Enh #1618: Fixed CHttpRequest::getAcceptTypes() to make sure it works even if HTTP_ACCEPT is not defined (Y!!)
- Enh #1627: Added check if FreeType support is installed and enabled in GD (mdomba)
- Enh #1641: Added PhpUnit 3.5.0RC1 and up support (Sam Dark)
- Enh #1651: Added 'name' and 'model' properties to the attribute objects used in CActiveForm javascript code (Qiang)
- Enh #1659: Improved CHttpRequest::sendFile() and CWebService::renderWsdl() to make them more secure in case mbstring.func_overload is in effect (Qiang)
- Enh #1661: Added CActiveForm 'reset' event handler to reset validation errors if using CHtml::resetButton() (mdomba)
- Enh #1667: Added CDbCriteria::index to support indexing the AR query result array with the specified attribute values (Qiang)
- Enh #1668: Added validation to ensure PHP keywords be not used as class names (Qiang)
- Enh #1688: Refactored CDbMessageSource to allow easier extension (Qiang)
- Enh #1699: Added capability to remove duplicated script files registered for different positions in CClientScript (Qiang)
- Enh #1711: JavaScript registered in POS_LOAD will now be put in jQuery window load event instead of the previous global window load event (Qiang)
- Enh: Upgraded JQuery UI to 1.8.5 (Sam Dark)
- Enh: Added checking for empty keywords in addSearchCondition(), to prevent adding unnecessary conditions (mdomba)
- Enh: Added flushValues() method to the cache classes (Y!!)
- Enh: Added buttonset for CJuiButoon (sebas)
- Enh: Improved error handling to catch errors occurring in CApplication::end() (Qiang)
- Enh: Improved CHttpRequest::sendFile() to avoid timeout errors caused by long file downloading time (Qiang)
- Enh: Improved action parameter binding by detecting if a parameter requires array or not (Qiang)
- Enh: Added logging of DB query params in DB query profiling (Sam Dark, Vitaliy Stepanenko)
- Chg #1678: The prompt and empty options used in CHtml methods will NOT be HTML-encoded anymore. (Qiang)