@@ -34,6 +34,7 @@ Version 1.1.5 to be released
 - Enh #1627: Added check if FreeType support is installed and enabled in GD (mdomba)
 - Enh #1641: Added PhpUnit 3.5.0RC1 and up support (Sam Dark)
 - Enh #1651: Added 'name' and 'model' properties to the attribute objects used in CActiveForm javascript code (Qiang)
+- Enh #1658: Added CAssetManager::linkAssets to support publishing assets via symbolic links (Qiang)
 - Enh #1659: Improved CHttpRequest::sendFile() and CWebService::renderWsdl() to make them more secure in case mbstring.func_overload is in effect (Qiang)
 - Enh #1661: Added CActiveForm 'reset' event handler to reset validation errors if using CHtml::resetButton() (mdomba)
 - Enh #1667: Added CDbCriteria::index to support indexing the AR query result array with the specified attribute values (Qiang)
